apps/lauraouthuis.nl/base/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: laura-blog
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lauraouthuis.nl`)
      kind: Rule
      services:
        - name: laura-blog
          port: http
